# mumosa

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  annotated.html  classes.html  dir_66066c54d82ff53d420eafcccd5ec722.html  files.html  functions.html  functions_vars.html  graph_legend.html  index.html  menudata.js  mumosa.tag  mumosa_8hpp.html  mumosa_8hpp__incl.map  mumosa_8hpp__incl.md5  mumosa_8hpp_source.html  namespacemembers.html  namespacemembers_func.html  namespacemumosa.html  namespaces.html  structmumosa_1_1Options-members.html  structmumosa_1_1Options.html
docs/search/: all_2.js  all_5.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_5.js  files_5.js  functions_1.js  namespaces_1.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js  variables_1.js
include/mumosa/: mumosa.hpp
tests/: CMakeLists.txt
tests/R/: dimensions.Rmd
tests/src/: mumosa.cpp
